<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:gravity="center"
    android:focusableInTouchMode="true"
    >
    
<ScrollView
android:layout_width="fill_parent"
android:layout_height="wrap_content" >


    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"

    android:background="@drawable/dialog"
    android:gravity="center"
    android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/bordertit"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:text="@string/str_lblInmuebles"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:typeface="normal"
                android:textSize="18dp"
                android:textStyle="bold"
                android:gravity="center"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/lbl_blanco" />
        </LinearLayout>

    
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" android:padding="10dp"
        >

            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="4dp"

            android:orientation="horizontal" >

                <EditText
                android:id="@+id/txtDireccionInmueble"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                    android:paddingLeft="15dp"
                    android:drawableLeft="@drawable/housed"
                    android:background="@drawable/border"
                android:hint="@string/str_txtDireccionInmueble"
                android:textSize="14dp"
                android:ems="10"
                android:textColor="@color/lbl_negro"/>
                
            </LinearLayout>                         
          
 <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

     <EditText
                android:id="@+id/txtColorInmueble"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
         android:paddingLeft="15dp"
         android:drawableLeft="@drawable/paint"
                android:background="@drawable/border"
                android:layout_gravity="center"
                android:hint="@string/str_txtColorInmueble"
                android:textSize="14dp"
                android:ems="10"
                android:textColor="@color/lbl_negro"/>
                
            </LinearLayout> 
          
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="4dp"
            android:orientation="vertical" >
        
                <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="14dp"
                android:gravity="left"
                android:hint="@string/str_lblDetalleInmueble"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/lbl_blanco" />
                
                <EditText
                android:id="@+id/txtDetalleInmueble"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                    android:background="@drawable/border"
                android:layout_gravity="center"
                android:textSize="14dp"
                android:ems="10"
                android:hint="@string/str_txtDetalleInmueble"
                android:layout_centerInParent="true"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxWidth="300sp"
                android:minWidth="10.0dip"
                android:scrollHorizontally="false"
                android:textColor="@color/lbl_negro"
                    android:padding="5dp" />
                    

            </LinearLayout>   
            
     
     
    </LinearLayout>
    
   
 
            
        
        <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"

    android:layout_marginBottom="5dp"
    android:gravity="center"
    android:orientation="horizontal" >
         
           <Button
            android:id="@+id/btnAgregarInmueble"
            android:layout_width="120dp"
            android:layout_height="wrap_content"  
            android:layout_marginRight="2dp"    
            android:layout_marginTop="5dp"    
            android:layout_marginBottom="5dp"                             
            android:text="@string/str_btnAgregar"
            android:textSize="15dp"
            android:textStyle="bold"
            android:background="@drawable/theme"
            android:textColor="@color/lbl_blanco"/>
        
           <Button
            android:id="@+id/btnCancelarInmueble"
            android:layout_width="120dp"
            android:layout_height="wrap_content"    
            android:layout_marginLeft="2dp"  
            android:layout_marginTop="5dp"    
            android:layout_marginBottom="5dp"                             
            android:text="@string/str_btnBorrar"
            android:textSize="15dp"
            android:textStyle="bold"
            android:background="@drawable/theme"
            android:textColor="@color/lbl_blanco"/>
    </LinearLayout>
         
    </LinearLayout>

</ScrollView>
    
</LinearLayout>
