<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"

    android:gravity="center"
    android:focusableInTouchMode="true" >
    
<ScrollView
android:layout_width="fill_parent"
android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">

    
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
        android:background="@drawable/dialog"
    android:gravity="center"
    android:orientation="vertical" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/bordertit"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:text="@string/str_lblVehiculos"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:typeface="normal"
                android:textSize="18dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/lbl_blanco" />
        </LinearLayout>


    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
        >
             

         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >
                <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/delivery"
                 />
                <Spinner
                android:id="@+id/ComboTipoVehiculo"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                    android:background="@drawable/border"
                android:layout_gravity="center"
                android:textSize="14dp"
                android:textColor="@color/lbl_negro"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp" />
                
            </LinearLayout>  
        
        
        
        
            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/fondo_background"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

                <EditText
                android:id="@+id/txtModeloVehiculo"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                    android:background="@drawable/border"
                    android:paddingLeft="13dp"
                    android:drawableLeft="@drawable/pencil"
                android:layout_gravity="center"
                android:hint="@string/str_txtModeloVehiculo"
                android:textSize="14dp"
                android:ems="10"
                android:textColor="@color/lbl_negro"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp" />
                
            </LinearLayout>                         
            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/fondo_background"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

                <EditText
                android:id="@+id/txtMarcaVehiculo"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                    android:background="@drawable/border"
                    android:paddingLeft="13dp"
                    android:drawableLeft="@drawable/parked"
                android:hint="@string/str_txtMarcaVehiculo"
                android:textSize="14dp"
                android:ems="10"
                android:textColor="@color/lbl_negro"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />
                
            </LinearLayout> 
            
 <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/fondo_background"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

     <EditText
                android:id="@+id/txtPlacaVehiculo"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="@drawable/border"
         android:paddingLeft="13dp"
         android:drawableLeft="@drawable/placa"
                android:hint="@string/str_txtPlacaVehiculo"
                android:textSize="14dp"
                android:ems="10"
                android:textColor="@color/lbl_negro"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp" />
                
            </LinearLayout> 
            
            
                        
 <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/fondo_background"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

     <EditText
                android:id="@+id/txtColorVehiculo"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="@drawable/border"
         android:paddingLeft="13dp"
         android:drawableLeft="@drawable/paint"
                android:hint="@string/str_txtColorVehiculo"
                android:textSize="14dp"
                android:ems="10"
                android:textColor="@color/lbl_negro"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp" />
                
            </LinearLayout> 
       
          
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/fondo_background"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="4dp"
            android:orientation="vertical" >
        
                <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="14dp"
                android:gravity="left"
                android:hint="@string/str_lblDetalleVehiculo"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/lbl_negro"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />
                
                <EditText
                android:id="@+id/txtDetalleVehiculo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                    android:background="@drawable/border"
                android:textSize="14dp"
                android:ems="10"
                android:hint="@string/str_txtDetalleVehiculo"
                android:layout_centerInParent="true"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxWidth="300sp"
                android:minWidth="10.0dip"
                android:scrollHorizontally="false"
                android:textColor="@color/lbl_negro"
                    android:padding="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp" />
                    

            </LinearLayout>   
            
     
     
    </LinearLayout>
    
   
 
            
        
        <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
    android:gravity="center"
    android:orientation="horizontal" >
         
           <Button
            android:id="@+id/btnAgregarVehiculo"
            android:layout_width="120dp"
            android:layout_height="wrap_content"  
            android:layout_marginRight="2dp"    
            android:layout_marginTop="5dp"    
            android:layout_marginBottom="5dp"                             
            android:text="@string/str_btnAgregar"
            android:textSize="15dp"
            android:textStyle="bold"
            android:background="@drawable/theme"
            android:textColor="@color/lbl_blanco"/>
        
           <Button
            android:id="@+id/btnCancelarVehiculo"
            android:layout_width="120dp"
            android:layout_height="wrap_content"    
            android:layout_marginLeft="2dp"  
            android:layout_marginTop="5dp"    
            android:layout_marginBottom="5dp"                             
            android:text="@string/str_btnBorrar"
            android:textSize="15dp"
            android:textStyle="bold"
            android:background="@drawable/theme"
            android:textColor="@color/lbl_blanco"/>
    </LinearLayout>
         
    </LinearLayout>

</ScrollView>
    
</LinearLayout>
