<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="fill_parent"
        android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">


        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="false"
            android:id="@+id/scnos">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/fondo_background"
                android:gravity="center"
                android:orientation="vertical" >


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"

                    android:weightSum="1"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="5dp">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginTop="2dp"

                        android:gravity="center"
                        android:orientation="horizontal" >

                        <TextView
                            android:text="@string/lbl_titulosaludo"
                            android:layout_width="274dp"
                            android:layout_height="wrap_content"
                            android:typeface="normal"
                            android:textSize="22dp"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/lbl_negro" />
                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:background="@color/fondo_background"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:orientation="vertical"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="0.48"
                        android:weightSum="1"
                        android:id="@+id/lv2">
                        <ImageView
                            android:layout_width="240dp"
                            android:layout_height="160dp"
                            android:src="@drawable/direjandro"
                            android:layout_marginLeft="10dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp" />
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:gravity="left"
                            android:text="@string/lbl_saludo"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/lbl_negro"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_margin="5dp">

                            <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="1dp"
                                android:gravity="center"
                                android:background="#0885ff"
                                android:layout_marginLeft="3dp"
                                android:layout_marginRight="3dp"
                                android:layout_marginTop="4dp"
                                android:orientation="vertical"
                                android:layout_marginBottom="0dp"></LinearLayout>

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:text="@string/lbl_director"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/lbl_negro"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:layout_marginTop="5dp" />
                        </LinearLayout>




                    </LinearLayout>



                </LinearLayout>







            </LinearLayout>

        </ScrollView>

</LinearLayout>